src/app/modalwindows/business/dynamic/dynamic.input.component.css
.roles-input-labels {
    margin-left: 2rem;
    font-family: Roboto;
    font-size: 16px;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
    color: #323232;
}

input[type="text"] {
    padding: 0.7rem;
}

.field-of-form {
    margin-top: 1.5rem;
}

.input-dynamic {
    margin-right: 2rem;
    height: 2.3rem;
    width: 28rem;
}

.input-dynamic input {
    width: 28rem;
    height: 2.3rem;
    border-radius: 6px;
    border: solid 1px #adadad;
}

